--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 	<title>我的个人主页</title>
 	<style type="text/css">
 		div{
-			width: 100px;
-			height: 100px;
+			width: 200px;
+			height: 200px;
+			text-align:center;
+			line-height:200px;
+			margin:10px auto;
 			background-color: pink;
 			border-radius: 50%;
 		}
