--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 			height: 200px;
 			text-align:center;
 			line-height:200px;
+			font-size:25px;
 			margin:10px auto;
 			background-color: pink;
 			border-radius: 50%;
