--- a/index.html
+++ b/index.html
@@ -15,14 +15,24 @@
 			border-radius: 50%;
 			font-weight:500;
 		}
+		ul{
+			margin-top: 50px;
+			list-style: none;
+		}
+		ul>li{
+			padding: 5px;
+		}
 	</style>
 </head>
 <body>
-	<div>我的个bolg</div>
-<<<<<<< HEAD
-	
-=======
-	<a href="小米商城/小米官网.html">小米官网</a>
->>>>>>> origin
+	<div>我的个人主页</div>
+	<ul>
+		<li><a href="小米商城/小米官网.html">小米商城</a></li>
+		<li><a href="万年历/万年历.html">万年历</a></li>
+		<li><a href="暴躁的小球/躁动的小球.html">躁动的小球</a></li>
+		<li><a href="映纷视觉官网/映纷视觉官网首页.html">映纷视觉</a></li>
+		<li><a href="携程/携程整站.html">携程</a></li>
+		<li><a href="360同城帮/index.html">360同城帮</a></li>
+	</ul>
 </body>
 </html>
