--- a/映纷视觉官网/join us.html
+++ b/映纷视觉官网/join us.html
@@ -130,9 +130,9 @@
 <body>
 	<div class="header">
 		<nav>
-			<a href="映纷视觉官网首页2.html" style="color:#fff;">HOME</a>
-			<a href="映纷视觉官网首页2.html#work">WORK</a>
-			<a href="映纷视觉官网首页2.html#contact">CONTACT</a>
+			<a href="映纷视觉官网首页.html" style="color:#fff;">HOME</a>
+			<a href="映纷视觉官网首页.html#work">WORK</a>
+			<a href="映纷视觉官网首页.html#contact">CONTACT</a>
 			<a href="javascript:;">JOIN US</a>
 		</nav>
 	</div>
