--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
 	<meta charset="UTF-8">
 	<title>我的个人主页</title>
 	<style type="text/css">
+		body{
+			margin: 0;
+			padding: 0;
+			background: url("https://wallpaperscraft.com/image/love_lettering_designs_glow_69133_1366x768.jpg") no-repeat;
+			background-size: 100%;
+		}
 		div{
-			width: 200px;
-			height: 200px;
+			width: 150px;
+			height: 150px;
 			text-align:center;
-			line-height:200px;
-			font-size:25px;
+			line-height:150px;
+			font-size:20px;
 			margin:10px auto;
-			background-color: pink;
+			background-color: rgb(44,28,29);
 			border-radius: 50%;
 			font-weight:500;
+			color:#fff;
+		}
+		div:hover{
+			box-shadow: 5px 5px 2px rgb(44,28,38);
 		}
 		ul{
 			margin-top: 50px;
@@ -21,6 +31,12 @@
 		}
 		ul>li{
 			padding: 5px;
+		}
+		ul>li>a{
+			text-decoration: none;
+		}
+		a:hover{
+			background-color: skyblue;
 		}
 	</style>
 </head>
