--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 		<li><a href="映纷视觉官网/映纷视觉官网首页.html">映纷视觉</a></li>
 		<li><a href="携程/携程整站.html">携程</a></li>
 		<li><a href="360同城帮/index.html">360同城帮</a></li>
+		<li><a href="七夕/送给我最爱的宝宝.html">献给最爱的宝宝</a></li>
+		<li><a href="七夕/花花.html">给宝宝的</a></li>
 	</ul>
 </body>
 </html>
