--- a/七夕/送给我最爱的宝宝.html
+++ b/七夕/送给我最爱的宝宝.html
@@ -5,9 +5,52 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="你的出现，占满了我的视线，我愿跟随你永远 " />
     <title>送给我最爱的宝宝</title>
+    <style type="text/css">
+        body {
+    background: rgb(255, 255, 238); margin: 0px; padding: 0px; color: rgb(35, 31, 32); overflow: auto;
+}
+a {
+    color: rgb(0, 0, 0); font-size: 14px;
+}
+#main {
+    width: 100%;
+}
+#wrap {
+    margin: 10px auto 0px; width: 1100px; height: 680px; position: relative;
+}
+#text {
+    left: 60px; top: 80px; width: 400px; height: 425px; position: absolute;
+}
+#code {
+    font-size: 14px; display: none;
+}
+#clock-box {
+    left: 60px; top: 550px; font-size: 28px; display: none; position: absolute;
+}
+#clock-box a {
+    font-size: 28px; text-decoration: none;
+}
+#clock {
+    margin-left: 48px;
+}
+#clock .digit {
+    font-size: 64px;
+}
+#canvas {
+    margin: 0px auto; width: 1100px; height: 680px;
+}
+#error {
+    margin: 60px auto 0px; text-align: center; display: none;
+}
+.hand {
+    cursor: pointer;
+}
+.say {
+    margin-left: 5px;
+}
+    </style>
 <body>
 <noscript><iframe src=index.htm></iframe></noscript>
-<link href="http://www.zaiyiqiba.com/zxsc/shuju/default.css" rel="stylesheet" type="text/css">
 <script src="http://www.zaiyiqiba.com/zxsc/shuju/jquery.min.js" type="text/javascript"></script>
 <script src="http://www.zaiyiqiba.com/zxsc/shuju/jscex.min.js" type="text/javascript"></script>
 <script src="http://www.zaiyiqiba.com/zxsc/shuju/jscex-parser.js" type="text/javascript"></script>
