--- a/七夕/送给我最爱的宝宝.html
+++ b/七夕/送给我最爱的宝宝.html
@@ -3,54 +3,12 @@
 
 <head><meta content="IE=11.0000" http-equiv="X-UA-Compatible">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="keywords" content=" http://www.zaiyiqiba.com" />
     <meta name="description" content="你的出现，占满了我的视线，我愿跟随你永远 " />
     <title>送给我最爱的宝宝</title>
-    <style type="text/css">
-        body {
-    background: rgb(255, 255, 238); margin: 0px; padding: 0px; color: rgb(35, 31, 32); overflow: auto;
-}
-a {
-    color: rgb(0, 0, 0); font-size: 14px;
-}
-#main {
-    width: 100%;
-}
-#wrap {
-    margin: 10px auto 0px; width: 1100px; height: 680px; position: relative;
-}
-#text {
-    left: 60px; top: 80px; width: 400px; height: 425px; position: absolute;
-}
-#code {
-    font-size: 14px; display: none;
-}
-#clock-box {
-    left: 60px; top: 550px; font-size: 28px; display: none; position: absolute;
-}
-#clock-box a {
-    font-size: 28px; text-decoration: none;
-}
-#clock {
-    margin-left: 48px;
-}
-#clock .digit {
-    font-size: 64px;
-}
-#canvas {
-    margin: 0px auto; width: 1100px; height: 680px;
-}
-#error {
-    margin: 60px auto 0px; text-align: center; display: none;
-}
-.hand {
-    cursor: pointer;
-}
-.say {
-    margin-left: 5px;
-}
-    </style>
 <body>
 <noscript><iframe src=index.htm></iframe></noscript>
+<link href="http://www.zaiyiqiba.com/zxsc/shuju/default.css" rel="stylesheet" type="text/css">
 <script src="http://www.zaiyiqiba.com/zxsc/shuju/jquery.min.js" type="text/javascript"></script>
 <script src="http://www.zaiyiqiba.com/zxsc/shuju/jscex.min.js" type="text/javascript"></script>
 <script src="http://www.zaiyiqiba.com/zxsc/shuju/jscex-parser.js" type="text/javascript"></script>
@@ -58,7 +16,7 @@ a {
 <script src="http://www.zaiyiqiba.com/zxsc/shuju/jscex-builderbase.min.js" type="text/javascript"></script>
 <script src="http://www.zaiyiqiba.com/zxsc/shuju/jscex-async.min.js" type="text/javascript"></script>
 <script src="http://www.zaiyiqiba.com/zxsc/shuju/jscex-async-powerpack.min.js" type="text/javascript"></script>
-<script src="http://www.zaiyiqiba.com/zxsc/shuju/jscex-async-powerpack.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="http://www.zaiyiqiba.com/zxsc/shuju/functions.js" type="text/javascript" charset="utf-8"></script>
 <script src="http://www.zaiyiqiba.com/zxsc/shuju/love.js" type="text/javascript" charset="utf-8"></script>
 <script>
     $(document).ready(function(){
@@ -108,6 +66,7 @@ a {
 
 <div id="main">
 
+    <div id="error">温馨提醒您，本页面采用HTML5编辑，目前您的浏览器无法显示，请尝试更换浏览器，建议使用(<A href="http://www.zaiyiqiba.com/liulanqi">专用浏览器</A>)，或者其他游览器的最新版本。</div>
 
     <div id="wrap">
 
@@ -116,13 +75,14 @@ a {
             <div id="code">
 
 
-                <FONT color="#ff0000"><SPAN class="say">去年的5月25号,茫茫人海中我们相识了</SPAN><BR>
+                <FONT color="#ff0000"><SPAN class="say">去年的5月25号,茫茫人海中我们相识了 </SPAN><BR>
                     <SPAN class="say"></SPAN><BR><SPAN class="say">自从认识你那天开始，我的生活就开始变得多姿多彩, 每一天都沉浸在你给我的喜悦之中 </SPAN><BR>
                     <SPAN class="say"></SPAN><BR><SPAN class="say">之前我并没有觉得我们会擦出什么火花, 直到发现自己每次都会不自觉的想起你,想要关心你,你不见了心里会慌张,怕你再也不出现 </SPAN><BR>
-                    <SPAN class="say"></SPAN><BR><SPAN class="say">那一刻我知道我恋爱了,我已经不知不觉的爱上你了,每天一个人傻笑着翻看着我们的聊天记录,回味着我们的点点滴滴 </SPAN><BR>
+                    <SPAN class="say"></SPAN><BR><SPAN class="say">那一刻我知道我恋爱了,我已经不知不觉的爱上你了,每天一个人傻笑着翻看着我们的聊天记录,回味着我们的点点滴滴  </SPAN><BR>
                     <SPAN class="say"></SPAN><BR><SPAN class="say">很幸运能够最美好的年纪遇到我最爱的你,是你的出现让我变得优秀,也是你让我养成了那么多的好习惯 </SPAN><BR>
-                    <SPAN class="say"></SPAN><BR><SPAN class="say">一路走过来,我们经历的也不少了,谢谢你一直陪着我这个爱啰嗦又老是惹你生气的我 </SPAN><BR>
-                    <SPAN class="say"></SPAN><BR><SPAN class="say">希望我们能够一直这样走下去,一直陪伴着对方,一直互相爱着对方,我会努力学习的,把之前没有在你身边欠你的时光都补给你的  </SPAN><BR>
+                    <SPAN class="say"></SPAN><BR><SPAN class="say">一路走过来,我们经历的也不少了,谢谢你一直陪着我这个爱啰嗦又老是惹你生气的我  </SPAN><BR>
+                    <SPAN class="say"></SPAN><BR><SPAN class="say">希望我们能够一直这样走下去,一直陪伴着对方,一直互相爱着对方,我会努力学习的,把之前没有在你身边欠你的时光都补给你的 </SPAN><BR>
+                    <SPAN class="say"></SPAN><BR><SPAN class="say">愿余生一直有你</SPAN><BR>
                     <SPAN class="say"></SPAN><BR><SPAN class="say">情人节快乐,宝宝,撒浪嘿哟mua </SPAN>
                 </FONT>
             </div></div>
@@ -266,7 +226,7 @@ a {
 
         var flowAnimate = eval(Jscex.compile("async", function () {
             do {
-                tree.flower(1);
+                tree.flower(2);
                 $await(Jscex.Async.sleep(10));
             } while (tree.canFlower());
         }));
@@ -283,7 +243,7 @@ a {
             // 会有闪烁不得意这样做, (＞﹏＜)
             canvas.parent().css("background", "url(" + tree.toDataURL('image/png') + ")");
             canvas.css("background", "#ffe");
-            $await(Jscex.Async.sleep(400));
+            $await(Jscex.Async.sleep(300));
             canvas.css("background", "none");
         }));
 
@@ -337,13 +297,27 @@ a {
             <div style="text-align:center">
 
 
-
                 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=27867140&auto=1&height=66"></iframe>
 
+
+            </div>
+            <div id="copyright">
+                <div class="divcss5">Copyright © 2015 <a href='http://51bbw.cn' target="_blank">我要表白网</a>
+                    <img src="http://cdn.51bbw.cn/mo.jpg"> <!--虽然隐藏，但是应用于QQ分享显示-->
+                    <script type="text/javascript" src="http://cpro.baidustatic.com/cpro/ui/c.js"></script>
+
+                </div>
             </div>
     </div>
 </div>
 </div>
 </div>
+
+
+
+
+
+
+
 </body>
 </html>
