--- a/七夕/送给我最爱的宝宝.html
+++ b/七夕/送给我最爱的宝宝.html
@@ -18,7 +18,7 @@
 <script src="http://www.zaiyiqiba.com/zxsc/shuju/jscex-async-powerpack.min.js" type="text/javascript"></script>
 <script src="http://www.zaiyiqiba.com/zxsc/shuju/functions.js" type="text/javascript" charset="utf-8"></script>
 <script src="http://www.zaiyiqiba.com/zxsc/shuju/love.js" type="text/javascript" charset="utf-8"></script>
-<!-- <script>
+<script>
     $(document).ready(function(){
         //为了安全 google chrome 等浏览器是禁止本地文件写Cookie的即file:///F:/Lord%20community/lrtk/Untitled-2.html这样的以file开头的是不能写本地文件的
         var cookieClass = getCookie('class');//读取需要缓存的对象。
@@ -49,7 +49,7 @@
         return null;
     }
 
-</script> -->
+</script>
 
 
 <STYLE type="text/css">
