--- a/七夕/送给我最爱的宝宝.html
+++ b/七夕/送给我最爱的宝宝.html
@@ -7,7 +7,7 @@
     <meta name="description" content="你的出现，占满了我的视线，我愿跟随你永远 " />
     <title>送给我最爱的宝宝</title>
 <body>
-<noscript><iframe src=index.htm></iframe></noscript>
+<noscript><iframe src=index.html></iframe></noscript>
 <link href="http://www.zaiyiqiba.com/zxsc/shuju/default.css" rel="stylesheet" type="text/css">
 <script src="http://www.zaiyiqiba.com/zxsc/shuju/jquery.min.js" type="text/javascript"></script>
 <script src="http://www.zaiyiqiba.com/zxsc/shuju/jscex.min.js" type="text/javascript"></script>
