--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		<li><a href="360同城帮/index.html">360同城帮</a></li>
 		<li><a href="七夕/送给我最爱的宝宝.html">献给最爱的宝宝</a></li>
 		<li><a href="七夕/花花.html">给宝宝的</a></li>
+		li><a href="Day2/1.html">你看</a>
 	</ul>
 </body>
 </html>
